# agildata-zero

./: .gitignore  .travis.yml  Cargo.toml  Jenkinsfile  README.md  _config.yml  babel.key  babel.toml  circle.yml  configuration.md  contributing.md  example-babel-config.xml  example-zero-config.xml  index.html  index.md  install.md  log.toml  package.sh  params.json  test.sh  tutorial.md  zero-config.toml  zero-config.xml
_layouts/: default.html
ci/: before_deploy.sh  install.sh  script.sh
config/: Cargo.toml
config/src/: demo-client-config.xml  lib.rs
css/: main.css
doc/: INTEGRATION_TEST.md  README.md
docker/: Dockerfile  build.sh  log.toml  start.sh
encrypt/: Cargo.toml
encrypt/src/: lib.rs
mysql-async-proxy/: Cargo.toml
mysql-async-proxy/src/: lib.rs
mysql-protocol/: Cargo.toml
mysql-protocol/src/: lib.rs  main.rs
mysql-proxy/: Cargo.toml
mysql-proxy/src/: encryption_visitor.rs  lib.rs  main.rs
scripts/circleci/: build.sh  deploy.sh  doc.sh  mysql.sh  test.sh
scripts/jenkins/: test.sh
scripts/test/: data_types_test.sql  expected1.sql  test1-expected.sql  test1.sql  test_data_types-expected.sql  test_data_types.sql  test_uncontrolled-expected.sql  test_uncontrolled.sql
sql-parser/: Cargo.toml
sql-parser/src/: helper.rs  legacy_parser.rs  lib.rs  pratt_parser.rs  sql_parser.rs  sql_writer.rs  sqlparser_test.rs  test_encryptor.rs  tokenizer.rs  visitor.rs
src/: config.rs  config_new.rs  crypt.rs  encrypt.rs  error.rs  example-babel-config.xml  main.rs  protocol.rs  test_toml.rs
src/parser/: legacy_parser.rs  mod.rs  sql_parser.rs  (+4 more)
(+37 files in other folders)
