[package]
publish = false
name = "agildata-zero"
version = "0.1.0-SNAPSHOT"

[dependencies]
clippy = {version = "*", optional = true}
argparse = "0.2.1"
log = "0.3"
env_logger = "0.3"
rust-crypto = "0.2.36"
byteorder = "0.5.3"
RustyXML = "0.1.1"
bytes = "0.2.10"
mio = "0.4.4"
mysql = "7.0.1"
mysql-proxy = "0.1.4"
futures = "0.1.1"
tokio-core = "0.1.0"

[features]
default = []
